--- a/infinite/MainPage.xaml
+++ b/infinite/MainPage.xaml
@@ -2,35 +2,33 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="infinite.MainPage">
+    <Grid>
+        <HorizontalStackLayout x:Name="HorizontalStackLayout1">
+            <Image Source="fundo1.png"/>
+            <Image Source="fundo1.png"/>
+            <Image Source="fundo1.png"/>
+        </HorizontalStackLayout>
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+        <HorizontalStackLayout x:Name="HorizontalStackLayout2">
+            <Image Source ="fundo2.png"/>
+            <Image Source ="fundo2.png"/>
+            <Image Source ="fundo2.png"/>
+        </HorizontalStackLayout>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+        <HorizontalStackLayout x:Name="HorizontalStackLayout3">
+            <Image Source ="fundo3.png"/>
+            <Image Source ="fundo3.png"/>
+            <Image Source ="fundo3.png"/>
+        </HorizontalStackLayout>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+        <HorizontalStackLayout x:Name="HorizontalStackLayoutChao"
+                               HorizontalOptions = "End">
+            <Image Source ="chao.png"/>
+            <Image Source ="chao.png"/>
+            <Image Source ="chao.png"/>
+        </HorizontalStackLayout>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+    </Grid>
+
 
 </ContentPage>
