--- a/infinite/MainPage.xaml
+++ b/infinite/MainPage.xaml
@@ -1,34 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="infinite.MainPage">
-    <Grid>
-        <HorizontalStackLayout x:Name="HorizontalStackLayout1">
-            <Image Source="fundo1.png"/>
-            <Image Source="fundo1.png"/>
-            <Image Source="fundo1.png"/>
-        </HorizontalStackLayout>
-
-        <HorizontalStackLayout x:Name="HorizontalStackLayout2">
-            <Image Source ="fundo2.png"/>
-            <Image Source ="fundo2.png"/>
-            <Image Source ="fundo2.png"/>
-        </HorizontalStackLayout>
-
-        <HorizontalStackLayout x:Name="HorizontalStackLayout3">
-            <Image Source ="fundo3.png"/>
-            <Image Source ="fundo3.png"/>
-            <Image Source ="fundo3.png"/>
-        </HorizontalStackLayout>
-
-        <HorizontalStackLayout x:Name="HorizontalStackLayoutChao"
-                               HorizontalOptions = "End">
-            <Image Source ="chao.png"/>
-            <Image Source ="chao.png"/>
-            <Image Source ="chao.png"/>
-        </HorizontalStackLayout>
-
-    </Grid>
+             x:Class="infinite.MainPage"
+             Shell.NavBarIsVisible="false">
 
 
+   <Grid>
+      <HorizontalStackLayout x:Name="primeiraimg">
+         <Image Source="fundo1.png"/>
+         <Image Source="fundo1.png"/>
+         <Image Source="fundo1.png"/>
+      </HorizontalStackLayout>
+
+      <HorizontalStackLayout x:Name="segundaimg">
+         <Image Source="fundo2.png"/>
+         <Image Source="fundo2.png"/>
+         <Image Source="fundo2.png"/>
+      </HorizontalStackLayout>
+
+      <HorizontalStackLayout x:Name="terceiraimg">
+         <Image Source="fundo3.png"    
+                Margin="0,80,0,0"/>
+         <Image Source="fundo3.png"            
+                Margin="0,80,30,0"/>
+         <Image Source="fundo3.png"               
+                Margin="0,80,0,0"/>
+      </HorizontalStackLayout>
+
+
+
+      <HorizontalStackLayout x:Name="quartaimg">
+         <Image Source="chao.png"
+                Aspect="Fill"
+                VerticalOptions="End"
+                HeightRequest="200"/>
+         <Image Source="chao.png"
+                Aspect="Fill"
+                VerticalOptions="End"
+                HeightRequest="200"/>
+         <Image Source="chao.png"
+                Aspect="Fill"
+                VerticalOptions="End"
+                HeightRequest="200"/>
+      </HorizontalStackLayout>
+   </Grid>
 </ContentPage>
